tests/ui/parser/impl-item-type-no-body-semantic-fail.stderr
error: associated type in `impl` without body
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:6:5
   |
LL |     type Y;
   |     ^^^^^^-
   |           |
   |           help: provide a definition for the type: `= <type>;`

error: associated type in `impl` without body
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:9:5
   |
LL |     type Z: Ord;
   |     ^^^^^^^^^^^-
   |                |
   |                help: provide a definition for the type: `= <type>;`

error: bounds on `type`s in `impl`s have no effect
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:9:13
   |
LL |     type Z: Ord;
   |             ^^^

error: associated type in `impl` without body
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:13:5
   |
LL |     type W: Ord where Self: Eq;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |                               |
   |                               help: provide a definition for the type: `= <type>;`

error: bounds on `type`s in `impl`s have no effect
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:13:13
   |
LL |     type W: Ord where Self: Eq;
   |             ^^^

error: associated type in `impl` without body
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:17:5
   |
LL |     type W where Self: Eq;
   |     ^^^^^^^^^^^^^^^^^^^^^-
   |                          |
   |                          help: provide a definition for the type: `= <type>;`

error[E0658]: inherent associated types are unstable
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:6:5
   |
LL |     type Y;
   |     ^^^^^^^
   |
   = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
   = help: add `#![feature(inherent_associated_types)]` to the crate attributes to enable

error[E0658]: inherent associated types are unstable
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:9:5
   |
LL |     type Z: Ord;
   |     ^^^^^^^^^^^^
   |
   = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
   = help: add `#![feature(inherent_associated_types)]` to the crate attributes to enable

error[E0658]: inherent associated types are unstable
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:13:5
   |
LL |     type W: Ord where Self: Eq;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
   = help: add `#![feature(inherent_associated_types)]` to the crate attributes to enable

error[E0658]: inherent associated types are unstable
  --> $DIR/impl-item-type-no-body-semantic-fail.rs:17:5
   |
LL |     type W where Self: Eq;
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
   = help: add `#![feature(inherent_associated_types)]` to the crate attributes to enable

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0658`.
